# MiniSQL

./: .gitignore  CMakeLists.txt  README.md  config.md
include/: array.hpp  database.hpp  engine.hpp  net.hpp  sql_parser.hpp  storage.hpp  table.hpp  util.hpp
scripts/: install.sh  test.sh
src/: client_main.cpp  database.cpp  engine.cpp  net.cpp  server_main.cpp  sql_parser.cpp  storage.cpp  table.cpp  util.cpp
tests/: bplustree_delete_tests.cpp  minisql_tests.cpp  where_tests.cpp
